# effectful-showcase

./: CHANGELOG.md  LICENSE  README.md  effectful-showcase.cabal  presentation.md
app/: Main.hs
src/: Api.hs  CurrentTime.hs  Launch.hs  Logger.hs  Middlewares.hs  Server.hs  Storage.hs
