cabal-version:      3.0
name:               effectful-showcase
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Makarov Aleksandr S
maintainer:         al.makarov@tinkoff.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                    , Logger
                    , CurrentTime
                    , Storage
    -- other-modules:
    other-extensions: BlockArguments     
                    , DataKinds          
                    , FlexibleContexts   
                    , GADTs              
                    , LambdaCase         
                    , OverloadedStrings  
                    , ScopedTypeVariables
                    , TemplateHaskell    
                    , TypeApplications   
                    , TypeFamilies       
                    , TypeOperators      
    build-depends:    base ^>=4.16.3.0
                    , aeson >= 2
                    , bytestring
                    , effectful-core >= 2.2
                    , effectful >= 2.2
                    , effectful-th
                    , effectful-plugin
                    , text
                    , time
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -fplugin=Effectful.Plugin

executable effectful-showcase
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        effectful-showcase

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite effectful-showcase-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0,
        effectful-showcase
